kubernetes/apps/unbound-xi-game/gateway/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unbound-gateway
  labels:
    app.kubernetes.io/name: unbound-gateway
    app.kubernetes.io/component: edge-gateway
    app.kubernetes.io/part-of: unbound-xi-game
  annotations:
    lbipam.cilium.io/ips: "10.50.100.6"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: unbound-gateway
    app.kubernetes.io/component: edge-gateway
  ports:
    - name: quic
      port: 15420
      targetPort: quic
      protocol: UDP
